@@ -1,4 +1,4 @@
-# last modified 2016-03-20 by J. Fox
+# last modified 2016-07-12 by J. Fox
 
 import(splines, tcltk, RcmdrMisc, car)
 importFrom(utils, available.packages, install.packages, assignInMyNamespace, 
@@ -28,7 +28,7 @@ dialogSuffix, doItAndPrint, errorCondition, exists.method,
 Factors, factorsP, formulaFields, flushDialogMemory, 
 gassign, getDialog, getFrame, getRcmdr, getSelection, gettextRcmdr,
 glmP, GrabFocus, groupsBox, groupsLabel, hclustSolutionsP, initializeDialog, 
-is.SciViews, is.valid.name, justDoIt, knitrP, labelRcmdr, Library,
+is.SciViews, is.valid.name, is.valid.number, justDoIt, knitrP, labelRcmdr, Library,
 listAllModels, listAOVModels, listDataSets, listFactors, listGeneralizedLinearModels, 
 listLinearModels, listMultinomialLogitModels, listNumeric, listPlugins, 
 listProportionalOddsModels, listTwoLevelFactors, listVariables, 
