@@ -14,6 +14,8 @@ Changes to Version 2.3-0
   
   o The Shapiro-Wilk test for normality dialog is replaced by a more general normality-tests dialog.
   
+  o Dialogs for plotting continuous distributions now allow the user to specify regions to fill.
+  
   o Various small improvements/bug fixes.
   
   
